welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
def marquerSol() {
baisseBrosse();
leveBrosse();}
def fairV() {
avance();
marquerSol();
avance();
gauche();
avance();
marquerSol();
recule();
droite();
avance();
marquerSol();
avance();
gauche();}
}
for (x<- 1 to 4){
	fairV();
}
